--- a/webclient/tsconfig.json
+++ b/webclient/tsconfig.json
@@ -23,7 +23,9 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
