--- a/assemblies/pentaho-classic-plugin-assembly/src/main/resources/plugin.xml
+++ b/assemblies/pentaho-classic-plugin-assembly/src/main/resources/plugin.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin title="Classic Plugin" name="classicPlugin">
-  <overlays>
-    <overlay id="launch" resourcebundle="content/classicPlugin/resources/messages" priority="1">
-      <button id="classicPluginButton" label="${openClassicPlugin}"
-              command="window.parent.parent.mantle_openTab('${tabName}', '${tabName}', 'content/classicPlugin/webclient/index.html')"/>
-    </overlay>
-  </overlays>
-  <perspective id="classicPlugin.perspective" title="${titleClassicPlugin}" layout-priority="10"
-               resourcebundle="content/classicPlugin/resources/messages"
-               content-url="content/classicPlugin/webclient/index.html"/>
+<plugin title="Classic Plugin" name="app-shell">
+  <overlays/>
+  <perspective/>
   <external-resources/>
   <static-paths>
-    <static-path url="/classicPlugin/resources" localFolder="resources"/>
-    <static-path url="/classicPlugin/webclient" localFolder="webclient"/>
+    <static-path url="/app-shell/webclient" localFolder="webclient"/>
   </static-paths>
   <content-types/>
 </plugin>
