--- a/webclient/pom.xml
+++ b/webclient/pom.xml
@@ -10,10 +10,10 @@
     <version>10.2.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pentaho-classic-plugin-webclient</artifactId>
+  <artifactId>pentaho-app-shell</artifactId>
 
   <name>${project.artifactId}</name>
-  <description>Pentaho Classic Plugin Webclient</description>
+  <description>Pentaho App Shell</description>
 
   <properties>
     <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
@@ -35,8 +35,6 @@
         <artifactId>frontend-maven-plugin</artifactId>
         <version>${frontend-maven-plugin.version}</version>
         <configuration>
-          <nodeDownloadRoot>https://one.hitachivantara.com/artifactory/nodejs-generic-remote/</nodeDownloadRoot>
-          <npmDownloadRoot>https://one.hitachivantara.com/artifactory/npm-release/npm/-/</npmDownloadRoot>
           <nodeVersion>${nodejs.version}</nodeVersion>
           <npmVersion>${npm.version}</npmVersion>
         </configuration>
