potencial final version of plugin app-shell config

--- a/assemblies/pentaho-plugin/src/main/resources/app-shell.config.json
+++ b/assemblies/pentaho-plugin/src/main/resources/app-shell.config.json
@@ -1,13 +1,20 @@
 {
+  "moduleId": "@pentaho-apps/app-shell-home/",
+  "baseUrl": "/pentaho/api/repos/app-shell-home/webclient/",
+
+  "apps": {},
+
+  "headerActions": [],
+
   "menu": [{
     "label": "Home",
     "target": "/"
   }],
 
-  "mainPanel": {
-    "views": [{
-      "bundle": "@pentaho-plugin/app-shell-home/webclient/pages/Home.js",
-      "route": "/"
-    }]
-  }
+  "providers": [],
+
+  "views": [{
+    "bundle": "@pentaho-apps/app-shell-home/pages/Home.js",
+    "route": "/"
+  }]
 }
