add platform ready listener to process appshel config

--- a/assemblies/pentaho-classic-plugin-assembly/src/main/resources/plugin.xml
+++ b/assemblies/pentaho-classic-plugin-assembly/src/main/resources/plugin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin title="Classic Plugin" name="app-shell">
+  <lifecycle-listener class="com.pentaho.platform.PluginsAppShellConfigHandler"/>
   <overlays/>
   <perspective/>
   <external-resources/>
