--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,7 +9,9 @@
     <version>10.2.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>server</artifactId>
+  <groupId>pentaho</groupId>
+  <artifactId>pentaho-classic-plugin-server</artifactId>
+  <version>10.2.0.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
