Home view update  - lazy load dashboard widget (from DA)  - load and save a dashboard template  - table closer to mocks  - open page, help test table open action

--- a/assemblies/pentaho-plugin/src/main/resources/app-shell.config.json
+++ b/assemblies/pentaho-plugin/src/main/resources/app-shell.config.json
@@ -20,7 +20,8 @@
   "mainPanel": {
     "#comment3": "replace @self with '@pentaho-apps/:pluginId'",
     "views": [
-      { "bundle": "@self/pages/Home.js",  "route": "/" }
+      { "bundle": "@self/pages/Home.js",  "route": "/" },
+      { "bundle": "@self/pages/Open.js",  "route": "/open" }
     ]
   }
 }
