--- a/assemblies/pentaho-classic-plugin-assembly/pom.xml
+++ b/assemblies/pentaho-classic-plugin-assembly/pom.xml
@@ -5,21 +5,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.pentaho</groupId>
+    <groupId>pentaho</groupId>
     <artifactId>pentaho-classic-plugin-assemblies</artifactId>
     <version>10.3.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>pentaho-classic-plugin-assembly</artifactId>
   <packaging>pom</packaging>
-
-  <dependencies>
-    <dependency>
-      <groupId>com.pentaho</groupId>
-      <artifactId>pentaho-app-shell</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
 
   <profiles>
     <profile>
