--- a/assemblies/pom.xml
+++ b/assemblies/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.pentaho</groupId>
+    <groupId>pentaho</groupId>
     <artifactId>pentaho-classic-plugin</artifactId>
     <version>10.3.0.0-SNAPSHOT</version>
   </parent>
