--- a/webclient/pom.xml
+++ b/webclient/pom.xml
@@ -5,15 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.pentaho</groupId>
+    <groupId>pentaho</groupId>
     <artifactId>pentaho-classic-plugin</artifactId>
     <version>10.3.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pentaho-app-shell</artifactId>
-
-  <name>${project.artifactId}</name>
-  <description>Pentaho App Shell</description>
+  <artifactId>pentaho-classic-plugin-webclient</artifactId>
 
   <properties>
     <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
@@ -30,6 +27,19 @@
       </resource>
     </resources>
     <plugins>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>${javascript-compilation-directory}</directory>
+            </fileset>
+            <fileset>
+              <directory>${project.basedir}/node_modules</directory>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
