--- a/server/pom.xml
+++ b/server/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <commons-lang.version>2.6</commons-lang.version>
+    <jackson-databind.version>2.14.3</jackson-databind.version>
   </properties>
 
   <dependencies>
@@ -45,6 +46,11 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>${commons-lang.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson-databind.version}</version>
     </dependency>
   </dependencies>
 
