remove static resource from plugin.xml, define it in runtime using the plugin id and baseDir

--- a/assemblies/pentaho-plugin/src/main/resources/plugin.xml
+++ b/assemblies/pentaho-plugin/src/main/resources/plugin.xml
@@ -3,9 +3,6 @@
   <overlays />
   <perspective />
   <external-resources />
-  <static-paths>
-    <static-path url="/app-shell-home/resources" localFolder="resources"/>
-    <static-path url="/app-shell-home/webclient" localFolder="webclient"/>
-  </static-paths>
+  <static-paths />
   <content-types/>
 </plugin>
