remove static resource from plugin.xml, define it in runtime using the plugin id and baseDir

--- a/assemblies/pentaho-classic-plugin-assembly/src/main/resources/plugin.xml
+++ b/assemblies/pentaho-classic-plugin-assembly/src/main/resources/plugin.xml
@@ -4,8 +4,6 @@
   <overlays/>
   <perspective/>
   <external-resources/>
-  <static-paths>
-    <static-path url="/app-shell/webclient" localFolder="webclient"/>
-  </static-paths>
+  <static-paths/>
   <content-types/>
 </plugin>
