more tweaks to frontend

--- a/assemblies/pentaho-plugin/src/main/resources/app-shell.config.json
+++ b/assemblies/pentaho-plugin/src/main/resources/app-shell.config.json
@@ -1,11 +1,6 @@
 {
-  "#comment1.1": "NO RELATIVE PATH (or least going outside plugin context), JUST FOLDER NAME",
-  "#comment1.2": "This will create a static path in Pentaho, that can be accessed with /pentaho/api/:pluginId/:baseDir/...",
-  "#comment1.3": "final key value pair - '@pentaho-apps/:pluginId/': '/pentaho/api/repos/:pluginId/:baseDir/'",
-  "#comment1.4": "@pentaho-apps is by convention, not defined anywhere",
   "baseDir": "webclient",
 
-  "#comment2": "use only for consuming other micro-frontends (like normal apps in app-shell)",
   "apps": {},
 
   "header": { "actions": [] },
@@ -13,12 +8,14 @@
   "menu": [{
     "label": "Home",
     "target": "/"
+  }, {
+    "label": "Open",
+    "target": "/open"
   }],
 
   "providers": [],
 
   "mainPanel": {
-    "#comment3": "replace @self with '@pentaho-apps/:pluginId'",
     "views": [
       { "bundle": "@self/pages/Home.js",  "route": "/" },
       { "bundle": "@self/pages/Open.js",  "route": "/open" }
