--- a/webclient/package.json
+++ b/webclient/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.6",
-    "@hitachivantara/app-shell-vite-plugin": "*",
+    "@hitachivantara/app-shell-vite-plugin": "1.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.2.1",
