--- a/webclient/package.json
+++ b/webclient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pentaho-apps/pentaho-app-shell",
+  "name": "@pentaho-apps/app-shell",
   "private": true,
   "type": "module",
   "scripts": {
