--- a/assemblies/pentaho-classic-plugin-assembly/pom.xml
+++ b/assemblies/pentaho-classic-plugin-assembly/pom.xml
@@ -13,6 +13,18 @@
   <artifactId>pentaho-classic-plugin-assembly</artifactId>
   <packaging>pom</packaging>
 
+  <properties>
+    <jsoup.version>1.18.1</jsoup.version>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>${jsoup.version}</version>
+    </dependency>
+  </dependencies>
+
   <profiles>
     <profile>
       <id>unzip-assembly-to-local-biserver</id>
