--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,7 @@
   <properties>
     <commons-lang.version>2.6</commons-lang.version>
     <jackson-databind.version>2.14.3</jackson-databind.version>
+    <jsoup.version>1.18.1</jsoup.version>
   </properties>
 
   <dependencies>
@@ -51,6 +52,11 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson-databind.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>${jsoup.version}</version>
     </dependency>
   </dependencies>
 
